Expand/Collapse buttons re added. Closes issue #11

--- a/styles/sidebar.less
+++ b/styles/sidebar.less
@@ -77,13 +77,20 @@
 #account-switcher .heading, #account-sidebar .heading{
   color: @sidebar-heading-fg;
 }
+
 .account-sidebar-sections {
   background: @sidebar-bg;
   section {
     .item-container {
       background: @sidebar-bg;
       .disclosure-triangle {
-        display: none;
+        margin-left: 6px;
+        margin-right: -16px;
+      }
+      .item-children{
+        .item{
+          // margin-left: 10px;
+        }
       }
 
       .item {
@@ -96,10 +103,21 @@
           color: @sidebar-fg-color !important;
           box-shadow: 0 0.5px 0 @taiga-light, 0 -0.5px 0 @taiga-light, 0.5px 0 0 @taiga-light, -0.5px 0 0 @taiga-light !important;
         }
-
+        .icon{
+          margin-left: 13px;
+        }
         &.selected {
           background: @sidebar-active-item-bg !important;
           color: @white !important;
+          .name{
+            color: @white !important;
+            background: @sidebar-active-item-bg!important;
+            padding: 5px!important;
+            padding-left: 110%!important;
+            padding-right: 110%!important;
+            margin-left: -105%!important;
+          }
+
 
           .item-count-box {
             background: transparent !important;
@@ -120,5 +138,5 @@
 
 .nylas-outline-view .heading {
   padding-bottom: 10px;
-  text-transform: uppercase;
+  font-size: 13px;
 }
